fix: increase card's top/bottom padding for a better mobile screen spacing balance

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -105,7 +105,7 @@ body {
 }
 
 .custom-card-padding {
-  padding: .8em;
+  padding: 1.4em .8em;
 
   @media screen and (min-width: 768px) {
     padding: 1.8em;
